--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,37 @@
 body {
   font-family: poppins;
+  background: #272044;
 }
-.hero {
+.container {
+  max-width: 1500px;
+
+  margin: 0 auto;
+}
+header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url("../images/cover.jpg");
-  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   color: white;
-  font-size: 34px;
   text-align: center;
-  width: 100%;
-  height: 900px;
+  padding: 200px 0;
 }
-.hero h1 {
+header h1 {
   font-weight: 700;
   font-size: 96px;
-  line-height: 144px;
+  line-height: 1;
+  margin: 0;
 }
-.hero h3 {
+header h2 {
   font-weight: 400;
   font-size: 40px;
-  line-height: 60px;
-  text-align: center;
+  line-height: 1.5;
+  margin: 0;
 }
-.hero h4 {
+header h3 {
   font-weight: 900;
   font-size: 24px;
-  line-height: 36px;
+  line-height: 1.5;
   letter-spacing: 5px;
-  text-align: center;
+  margin: 0;
 }
