--- a/src/style.css
+++ b/src/style.css
@@ -35,3 +35,32 @@ header h3 {
   letter-spacing: 5px;
   margin: 0;
 }
+header a {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  color: #272044;
+  padding: 16px 32px;
+  background-color: white;
+  margin-top: 32px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  display: inline-block;
+}
+
+@media (max-width: 900px) {
+  header {
+    padding: 60px 0;
+  }
+  header h1 {
+    font-size: 48px;
+  }
+  header h2 {
+    font-size: 20px;
+  }
+  header h3 {
+    font-size: 12px;
+  }
+}
