--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,34 @@ header a {
   display: inline-block;
 }
 
+footer {
+  color: white;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("../images/boat.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 100px 0;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+footer h3 {
+  font-weight: 700;
+}
+footer ul {
+  padding: 0;
+}
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+footer a {
+  color: white;
+  opacity: 0.7;
+}
 @media (max-width: 900px) {
   header {
     padding: 60px 0;
@@ -62,5 +90,12 @@ header a {
   }
   header h3 {
     font-size: 12px;
+  }
+  .grid {
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+    padding: 60px;
   }
 }
