--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,7 @@ footer {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 100px 0;
+  padding: 100px 40px;
 }
 .grid {
   display: grid;
