--- a/src/style.css
+++ b/src/style.css
@@ -62,9 +62,17 @@ footer {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 footer h3 {
   font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+}
+footer p {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
 }
 footer ul {
   padding: 0;
