--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,11 @@ body {
 }
 .container {
   max-width: 1500px;
-
   margin: 0 auto;
 }
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../images/cover.jpg");
+    url("../images/cover.png");
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
@@ -53,7 +52,7 @@ header a {
 footer {
   color: white;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("../images/boat.jpg");
+    url("../images/boat.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -61,13 +60,48 @@ footer {
 }
 .grid {
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
   grid-gap: 64px;
+}
+.beach-photo {
+  max-width: 100%;
+}
+main {
+  background-color: white;
+}
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+.grid-3-columns {
+  grid-template-columns: 1fr 2fr 2fr;
+}
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+main h2 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+}
+main h4 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  opacity: 0.6;
+}
+main p {
+  opacity: 0.3;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 }
 footer h3 {
   font-weight: 700;
   font-size: 20px;
-  line-height: 30px;
+  line-height: 1.5;
 }
 footer p {
   font-weight: 400;
@@ -100,8 +134,14 @@ footer a {
     font-size: 12px;
   }
   .grid {
-    display: block;
-    margin: 0 auto;
+    grid-template-columns: 1fr;
+    grid-gap: 0px;
+  }
+  section {
+    padding: 30px;
+  }
+  .beach-photo {
+    max-width: 100%;
   }
   footer {
     padding: 60px;
