--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,9 @@ main {
   grid-template-columns: 1fr 1fr;
 }
 .grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.grid-3-columns-with-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 section {
@@ -82,7 +85,8 @@ section {
 main h2 {
   font-weight: 700;
   font-size: 40px;
-  line-height: 1.5;
+  line-height: 1;
+  margin: 10px auto;
 }
 main h4 {
   text-transform: uppercase;
@@ -91,12 +95,28 @@ main h4 {
   line-height: 1.5;
   letter-spacing: 5px;
   opacity: 0.6;
+  margin: 0;
 }
 main p {
-  opacity: 0.3;
+  opacity: 0.5;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+}
+.img-responsive {
+  max-width: 100%;
+  display: block;
+}
+.photo {
+  max-width: 100%;
+}
+.secondary {
+  background: #f8f8f8;
+  padding: 20px;
+}
+.text-center {
+  text-align: center;
+  padding-bottom: 20px;
 }
 footer h3 {
   font-weight: 700;
